--- a/define_seed_genes_orthology_mapping.ipynb
+++ b/define_seed_genes_orthology_mapping.ipynb
@@ -18,21 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "b976a774-bef5-4513-813c-a9a206c50012",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import statsmodels.stats\n",
+    "import statsmodels.stats.multitest\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "91e172db-d767-4008-8714-531143a39430",
    "metadata": {},
    "outputs": [],
@@ -1783,17 +1783,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "eddf581b-f4a6-4557-bcfd-3762abeaccb5",
+   "execution_count": 3,
+   "id": "e476452f-87fe-4f7c-b33a-663a2aeb7f91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ext_magma=pd.read_csv('magma/ext_munged.genes.out',delim_whitespace=True,index_col=None,skiprows=0)"
+    "set=['munged','orig']\n",
+    "file=set[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
+   "id": "eddf581b-f4a6-4557-bcfd-3762abeaccb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_magma=pd.read_csv('magma/ext_'+file+'.genes.out',delim_whitespace=True,index_col=None,skiprows=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "f39dd999-7ec3-44ac-a68c-7e9645d23102",
    "metadata": {},
    "outputs": [],
@@ -1804,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "id": "2c4953e1-630a-4978-b524-f622617cc1ec",
    "metadata": {},
    "outputs": [],
@@ -1815,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "id": "0142941b-0867-429b-9937-716cba0acd26",
    "metadata": {},
    "outputs": [],
@@ -1825,12 +1836,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "id": "5fd1f3fb-53c3-44fc-93f7-ae97bd9d9917",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ext_magma.to_csv('magma/seed_genes/ext_munged_annot.tsv',sep='\\t',index=False)"
+    "ext_magma.to_csv('magma/seed_genes/ext_'+file+'_annot.tsv',sep='\\t',index=False)"
    ]
   }
  ],
