--- a/genomic_PCA.ipynb
+++ b/genomic_PCA.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3fcf455e-c9d2-4449-aa02-bb5096706909",
+   "metadata": {},
+   "source": [
+    "purpose: to try running PCA analysis on the summary statistic level GWAS output for NICSA. This DID NOT WORK."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "bf05d891-41e0-4dd6-9514-2207b635a54e",
