--- a/define_seed_genes_orthology_mapping.ipynb
+++ b/define_seed_genes_orthology_mapping.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b976a774-bef5-4513-813c-a9a206c50012",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "91e172db-d767-4008-8714-531143a39430",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,9 @@
   {
    "cell_type": "markdown",
    "id": "52bbe775-f492-4564-ac4b-c7f67204afc3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# define ortholog dictionary"
    ]
@@ -716,7 +718,9 @@
   {
    "cell_type": "markdown",
    "id": "856f477f-2a8c-4424-a4f0-a3b16a8458a3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Read in rat genes (MAGMA)"
    ]
@@ -751,7 +755,9 @@
   {
    "cell_type": "markdown",
    "id": "bc300a48-c0d6-447a-adbe-81979ddfd5d4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# test cutoffs"
    ]
@@ -1606,7 +1612,9 @@
   {
    "cell_type": "markdown",
    "id": "a294d81e-77c7-4ab6-83ab-ecc4229647fe",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# merge in human orthologs"
    ]
@@ -2012,8 +2020,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a27393-43e2-467b-944f-8dd41ae01868",
+   "id": "2d87d3e6-5ea9-462a-bff3-285c1bc775aa",
    "metadata": {},
+   "source": [
+    "# externalizing 2 factor (magmav1.08)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3803bb35-490f-42e0-b0e9-0e749d2cd222",
+   "metadata": {},
+   "source": [
+    "from supplemental tables in The Genetic and Neural Substrates of Externalizing Behavior. previous magma version but i need access from the university that published it to get sumstats so we're going to use this . pvalue cutoff from paper for bonferroni"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ec00dda7-4f86-4ea6-8d77-57ca880a9642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_db=pd.read_csv('ext_2factor/MAGMA_v108_DB_bonf.tsv',sep='\\t')\n",
+    "ext_rtb=pd.read_csv('ext_2factor/MAGMA_v108_RTB_bonf.tsv',sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "57384d7e-b6a1-443d-8571-51e13c74bcdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_db['Q']=statsmodels.stats.multitest.fdrcorrection(ext_db['P'],alpha=0.05,method='indep',is_sorted=False)[1]\n",
+    "ext_rtb['Q']=statsmodels.stats.multitest.fdrcorrection(ext_rtb['P'],alpha=0.05,method='indep',is_sorted=False)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0b9d6807-ab79-4f02-ac01-ba07cfd29733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_db.to_csv('ext_2factor/MAGMA_v108_DB_bonf.tsv',sep='\\t',index=None)\n",
+    "ext_rtb.to_csv('ext_2factor/MAGMA_v108_RTB_bonf.tsv',sep='\\t',index=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93a27393-43e2-467b-944f-8dd41ae01868",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# locomotor mega (FUSION)"
    ]
