update notebooks  Please enter the commit message for your changes. Lines starting

--- a/define_seed_genes_orthology_mapping.ipynb
+++ b/define_seed_genes_orthology_mapping.ipynb
@@ -51,7 +51,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "65b0c7e7-54a7-4a13-80ee-f57384401fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path='/tscc/projects/ps-palmer/brittany/orthology_ref_tbls/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89b3d7f-15b8-48ea-a385-8511dd9f600f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "so for this version of the table (the one ive been using): \n",
+    "\n",
+    "ortho=pd.read_csv(f’{path}ORTHOLOGY-ALLIANCE_COMBINED_2024.tsv.gz’,compression=‘gzip’,sep=‘\\t’,skiprows=15)\n",
+    "ortho=ortho[(ortho['Gene1SpeciesName']=='Rattus norvegicus')&(ortho['Gene2SpeciesName']=='Homo sapiens')]\n",
+    "ortho_best=ortho[(ortho['IsBestScore']=='Yes')] #filter for best match\n",
+    "ortho_best=ortho[(ortho['IsBestScore']=='Yes')&(ortho['IsBestRevScore']=='Yes')] #filter for best match\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ad0ae088-d2ab-42ae-9d3b-e1ce6a4eb88b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3ddbdf52-e3c2-4ba0-b32d-c1da2b9f57c8",
    "metadata": {},
    "outputs": [
@@ -285,7 +311,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20068 rows × 13 columns</p>\n",
+       "<p>18315 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -341,17 +367,17 @@
        "567823               10         Yes            Yes  \n",
        "567829               10         Yes            Yes  \n",
        "\n",
-       "[20068 rows x 13 columns]"
+       "[18315 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ortho_best=ortho[ortho['IsBestScore']=='Yes']\n",
-    "ortho_best"
+    "ortho_besz"
    ]
   },
   {
@@ -2106,9 +2132,7 @@
   {
    "cell_type": "markdown",
    "id": "93a27393-43e2-467b-944f-8dd41ae01868",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# locomotor mega (FUSION)"
    ]
